@@ -1,1 +1,1 @@
-<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="" style="image;image=img/lib/clip_art/people/Suit_Man_128x128.png" parent="1" vertex="1"><mxGeometry x="30" y="20" width="80" height="80" as="geometry"/></mxCell><mxCell id="4" value="ns.genfic.com" style="image;image=img/lib/clip_art/computers/Server_128x128.png" parent="1" vertex="1"><mxGeometry x="500" y="20" width="80" height="80" as="geometry"/></mxCell><mxCell id="5" value="Q: What is the address of www.genfic.com ?&#xa;A: 2001:db8:81:80::1234:5678:9abc&#xa;(Type: AAAA)" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" parent="1" source="2" target="4" edge="1"><mxGeometry as="geometry"/></mxCell><mxCell id="6" value="" style="image;image=img/lib/clip_art/people/Suit_Man_Black_128x128.png" parent="1" vertex="1"><mxGeometry x="110" y="160" width="80" height="80" as="geometry"/></mxCell><mxCell id="7" value="Q: Where do I send mails for @genfic.com to?&#xa;A: smtp.genfic.com or smtp2.genfic.com&#xa;(Type: MX)" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" parent="1" source="6" target="4" edge="1"><mxGeometry as="geometry"/></mxCell><mxCell id="8" value="" style="image;image=img/lib/clip_art/people/Suit_Woman_Green_128x128.png" parent="1" vertex="1"><mxGeometry x="240" y="270" width="80" height="80" as="geometry"/></mxCell><mxCell id="9" value="Q: What is the address of www.somesite.com?&#xa;A: Try asking abcd:ef01:2345::6789" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" parent="1" source="8" target="4" edge="1"><mxGeometry as="geometry"/></mxCell><mxCell id="10" value="" style="image;image=img/lib/clip_art/people/Worker_Black_128x128.png" vertex="1" parent="1"><mxGeometry x="650" y="190" width="80" height="80" as="geometry"/></mxCell><mxCell id="11" value="Q: Which servers are allowed to send mails from genfic.com?&#xa;A: all those in the MX records" style="endArrow=classic;endFill=1;startArrow=classic;startFill=1" edge="1" parent="1" source="10" target="4"><mxGeometry as="geometry"/></mxCell></root></mxGraphModel>
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="" style="image;image=img/lib/clip_art/people/Suit_Man_128x128.png" parent="1" vertex="1"><mxGeometry x="30" y="20" width="80" height="80" as="geometry"/></mxCell><mxCell id="4" value="ns.genfic.com" style="image;image=img/lib/clip_art/computers/Server_128x128.png" parent="1" vertex="1"><mxGeometry x="500" y="20" width="80" height="80" as="geometry"/></mxCell><mxCell id="5" value="Q: What is the address of www.genfic.com ?&#xa;A: 2001:db8:81:80::1234:5678:9abc&#xa;(Type: AAAA)" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" parent="1" source="2" target="4" edge="1"><mxGeometry as="geometry"/></mxCell><mxCell id="6" value="" style="image;image=img/lib/clip_art/people/Suit_Man_Black_128x128.png" parent="1" vertex="1"><mxGeometry x="110" y="160" width="80" height="80" as="geometry"/></mxCell><mxCell id="7" value="Q: Where do I send mails for @genfic.com to?&#xa;A: smtp.genfic.com or smtp2.genfic.com&#xa;(Type: MX)" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" parent="1" source="6" target="4" edge="1"><mxGeometry as="geometry"/></mxCell><mxCell id="8" value="" style="image;image=img/lib/clip_art/people/Suit_Woman_Green_128x128.png" parent="1" vertex="1"><mxGeometry x="240" y="270" width="80" height="80" as="geometry"/></mxCell><mxCell id="9" value="Q: What is the address of www.somesite.com?&#xa;A: Try asking abcd:ef01:2345::6789" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" parent="1" source="8" target="4" edge="1"><mxGeometry as="geometry"/></mxCell><mxCell id="10" value="" style="image;image=img/lib/clip_art/people/Worker_Black_128x128.png" parent="1" vertex="1"><mxGeometry x="650" y="190" width="80" height="80" as="geometry"/></mxCell><mxCell id="11" value="Q: Which servers are allowed to send mails from genfic.com?&#xa;A: all those in the MX records" style="endArrow=classic;endFill=1;startArrow=classic;startFill=1" parent="1" source="10" target="4" edge="1"><mxGeometry as="geometry"/></mxCell><mxCell id="12" value="" style="shape=image;image=http://cdn4.iconfinder.com/data/icons/BRILLIANT/accounting/png/128/executive.png" vertex="1" parent="1"><mxGeometry x="460" y="330" width="80" height="84" as="geometry"/></mxCell><mxCell id="14" value="Q: What is the SSH fingerprint for test.genfic.com?&#xa;A: abcd:efg0:1234:5678" style="endArrow=classic;endFill=1;startArrow=classic;startFill=1" edge="1" parent="1" source="12" target="4"><mxGeometry as="geometry"><mxPoint x="-10.128205128205082" y="25" as="offset"/></mxGeometry></mxCell></root></mxGraphModel>
