@@ -1,3 +1,6 @@
+** (2013-01-27) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Paragraph on SSH finger prints in DNS (as example service)
+
 ** (2013-01-21) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Add info on git and gitolite
 
